[package]
name = "crate_name"
version = "0.1.0"
authors = ["Author Name BiscuitBobby"]

# the profile used for `cargo build`
[profile.dev]
panic = "abort" # disable stack unwinding on panic

# the profile used for `cargo build --release`
[profile.release]
panic = "abort" # disable stack unwinding on panic

# if something breaks, remove thid and builf for thumbv7em-none-eabihf
[build]
build-stage = 1
target = ["x86_64-unknown-none"]

[unstable]
build-std = ["core", "compiler_builtins"]